# phantex

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vite.config.js
frontend/src/css/: main.css
frontend/src/js/: bt.js  bte.js  wte.js
phantex/: __init__.py  app.py  db.py  extensions.py  settings.py
phantex/bt/: __init__.py  engine.py  history.py  tasks.py  views.py
phantex/bte/: __init__.py  engine.py  tasks.py  views.py
phantex/templates/: base.html  index.html
phantex/templates/bt/: index.html
phantex/templates/bte/: index.html
phantex/templates/errors/: 404.html  500.html
phantex/templates/wte/: index.html
phantex/wte/: __init__.py  engine.py  history.py  tasks.py  views.py
tests/: __init__.py  test_app.py  test_db.py
tests/bt/: __init__.py  test_engine.py  test_history.py  test_views.py
tests/bte/: __init__.py  test_engine.py  test_views.py
tests/wte/: test_engine.py  test_history.py  test_views.py
