[project]
name = "phantex"
version = "0.1.0"
description = "Local OSINT recon terminal -- Bluetooth, WiFi, and more"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "xransum" }]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "bleak>=2.1.1",
    "apscheduler>=3.11.2",
]

[project.scripts]
phantex = "phantex:run"

[project.optional-dependencies]
dev = [
    "nox>=2026.2.9",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phantex"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "nox>=2026.2.9",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

# ---------------------------------------------------------------------------
# ruff -- linting + formatting
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "N",   # pep8-naming
]
ignore = [
    "E501", # line too long -- handled by formatter
    "B008", # do not perform function calls in default args (common in Flask)
]

[tool.ruff.lint.isort]
known-first-party = ["phantex"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "noxfile.py"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=phantex --cov-report=term-missing --cov-report=html"
